Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3274

Cache fixup can cause race condition in ram cache.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 5.2.0
    • Cache
    • None

    Description

      The fix up logic for the broken cache issue in TS-2564 can cause a race condition for fragments that are stored in the ram cache. This can only occur if the cache is 4.2,1 formatted or older. If the cache has been reset since installing 4.2.2 or 5.X or later then this cannot occur.

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              amc Alan M. Carroll
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: