TS-3274: Fix race condition for cache fixup in ram cache.

Conflicts:
	CHANGES