iocore/cache/CacheRead.cc
@@ -161,7 +161,8 @@ uint32_t
 CacheVC::load_http_info(CacheHTTPInfoVector* info, Doc* doc, RefCountObj * block_ptr)
 {
   uint32_t zret = info->get_handles(doc->hdr(), doc->hlen, block_ptr);
-  if (cache_config_compatibility_4_2_0_fixup &&
+  if (cache_config_compatibility_4_2_0_fixup && // manual override not engaged
+      ! this->f.doc_from_ram_cache && // it's already been done for ram cache fragments
       vol->header->version.ink_major == 23 && vol->header->version.ink_minor == 0
     ) {
     for ( int i = info->xcount - 1 ; i >= 0 ; --i ) {
